# Ravan

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  Guide.md  LICENSE  NOTICE  README.md  README_API.md  README_DATA.md  comparission.md  pyproject.toml  requirements.txt
ObsidianVault/: README.md
config/: assets.yaml  project-manifest.yaml  semantic-model.yaml
docker/: Dockerfile.api  Dockerfile.flink-job  Dockerfile.flink-runtime  docker-compose.rehearsal.yml  docker-compose.yml  flink-job-entrypoint.sh  rehearsal.env
docs/: README.md  acceptance-tests.md  agent-governance.md  agent-integration-guidance.md  ai-lm-studio-soak-results-2026-07-14.md  ai-memory-and-skills-boundary.md  ai-provider-configuration.md  ai-reporting-policy-and-jobs.md  api-gateway-and-route-contract.md  app-functionality.md  architecture-hardening-2026-07-13.md  benchmark-results-2026-07-10.md  benchmark-results-2026-07-11-world-model.md  benchmark-results-2026-07-13-threshold-cache.md  benchmark-results.md  capacity-limit-results-2026-07-13.md  cgr-streaming-bi-comparison-and-spark-policy.md  clock-quality-policy.md  command-center-walkthrough.md  custom-dashboard-guide.md  data-integrity-contract.md  data-pipeline-audit-and-plan.md  data-provenance-guide.md  deployment-decision-memo.md  deployment-payload-boundaries.md  deployment-targets.md  docker-operator-guide.md  dreamer-training-guide.md  feature-audit.md  first-time-plc-ingest-guide.md  flink-capacity-planning.md  flink-operator-runbook.md  grafana-source-charts-workflow.md  hardening-benchmark-results-2026-07-12.md  historian-bounded-trend-reads.md  historian-guide.md  implementation-log.md  implementation-plan.md  implementation-report-2026-07-10.md  implementation-report-2026-07-11-multisite.md  (+65 more)
operator-shell/: README.md  package-lock.json  package.json
operator-shell/src-tauri/: Cargo.toml  tauri.conf.json
operator-shell/src-tauri/capabilities/: default.json
operator-shell/src-tauri/icons/: icon.icns
operator-shell/src-tauri/src/: lib.rs  main.rs
postgres/: init-timescale.sql
scripts/: __init__.py  ai-warning-soak.py  benchmark_ai_gateway_mock.py  benchmark_cgr_gap_report.py  benchmark_cgr_stream_slice.py  benchmark_mixed_replay.py  benchmark_real_world_simulator.py  benchmark_site_profile_matrix.py  build-operator-installer.ps1  build-operator-installer.sh  create-industrial-topics.ps1  create-topics.ps1  edge-soak.ps1  full-stack-soak.ps1  generate_release_evidence.py  install-linux-site-server.sh  kind-rehearsal.ps1  multi-site-live-soak.ps1  package-release.ps1  package-release.py  package-release.sh  ravan-site-doctor.sh  ravan-upgrade.ps1  ravan-upgrade.sh  ravan-windows-site.ps1  ravan.ps1  ravan.sh  ravanctl.ps1  ravanctl.sh  register-debezium.ps1  render_release_compose.py  run-local.ps1  seed-orders.ps1  setup-local-tls.ps1  setup-local-tls.sh  single-site-live-soak.ps1  site-profile-soak.ps1  start-industrial-sim.ps1  uninstall-linux-site-server.sh  upgrade-linux-site-server.sh  (+1 more)
tests/: test_admin_integrations.py  test_ai4i_adapter.py  test_ai_anomaly_tracker.py  test_ai_enriched_fanout.py  test_ai_event_contract.py  test_ai_gateway_dedup.py  test_ai_gateway_memory.py  test_ai_gateway_mock_benchmark.py  test_ai_gateway_providers.py  test_ai_reporting_policy.py  test_ai_warning_soak_script.py  test_alert_escalation.py  test_alert_manager.py  test_analytics.py  test_api_route_splits.py  test_api_runtime_fixes.py  test_api_security_middleware.py  (+136 more)
(+438 files in other folders)
